[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
futures = "0.3"
schema = { path = "../schema" }
tauri = { version = "2.0.0-beta", features = [] }
tracing = "0.1"
tracing-subscriber = "0.3"
tuber = { path = "../../..", default-features = false, features = ["bitcode", "core", "js"] }
tauri-plugin-tuber = { path = "../../../tuber-tauri-plugin" }
