[package]
name = "tauri"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3"
js-sys = "0.3"
parking_lot = { version = "0.11", features = ["wasm-bindgen"] }
schema = { path = "../schema" }
tracing = "0.1"
tracing-wasm = "0.2"
tuber = { path = "../../..", features = ["bitcode", "macros", "tauri", "worker"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-timer = "0.2"
